--- a/post/tolive/template/index.html
+++ b/post/tolive/template/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Ge&#39;s Blog</title>
+  <title>每日睡眠時間記錄 - Ge&#39;s Blog</title>
   <meta name="renderer" content="webkit" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="rwwg" /><meta name="description" content="rwwg的博客." />
+<meta name="author" content="rwwg" /><meta name="description" content="最重要的是睡一覺" />
 
 
 
@@ -26,9 +26,7 @@
 <meta name="generator" content="Hugo 0.82.0 with theme even" />
 
 
-<link rel="canonical" href="https://rwwg.github.io/" />
-  <link href="https://rwwg.github.io/index.xml" rel="alternate" type="application/rss+xml" title="Ge&#39;s Blog" />
-  <link href="https://rwwg.github.io/index.xml" rel="feed" type="application/rss+xml" title="Ge&#39;s Blog" />
+<link rel="canonical" href="https://rwwg.github.io/post/tolive/template/" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -41,15 +39,20 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css" integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin="anonymous">
 
 
-<meta property="og:title" content="Ge&#39;s Blog" />
-<meta property="og:description" content="rwwg的博客." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://rwwg.github.io/" />
+<meta property="og:title" content="每日睡眠時間記錄" />
+<meta property="og:description" content="最重要的是睡一覺" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://rwwg.github.io/post/tolive/template/" /><meta property="article:section" content="post" />
+<meta property="article:published_time" content="2023-01-24T00:00:00&#43;00:00" />
+<meta property="article:modified_time" content="2023-01-24T00:00:00&#43;00:00" />
 
-<meta itemprop="name" content="Ge&#39;s Blog">
-<meta itemprop="description" content="rwwg的博客."><meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Ge&#39;s Blog"/>
-<meta name="twitter:description" content="rwwg的博客."/>
+<meta itemprop="name" content="每日睡眠時間記錄">
+<meta itemprop="description" content="最重要的是睡一覺"><meta itemprop="datePublished" content="2023-01-24T00:00:00&#43;00:00" />
+<meta itemprop="dateModified" content="2023-01-24T00:00:00&#43;00:00" />
+<meta itemprop="wordCount" content="29">
+<meta itemprop="keywords" content="Simplified Chinese,sleep," /><meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="每日睡眠時間記錄"/>
+<meta name="twitter:description" content="最重要的是睡一覺"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
@@ -115,116 +118,82 @@
     <main id="main" class="main">
       <div class="content-wrapper">
         <div id="content" class="content">
-          <section id="posts" class="posts">
-    <article class="post">
-  <header class="post-header">
-    <h1 class="post-title"><a class="post-link" href="/post/othercs/%E5%BF%AB%E9%87%8D%E4%BC%A0%E4%B8%8E%E5%BF%AB%E6%81%A2%E5%A4%8D/">TCP的快重传和快恢复</a></h1>
-    <div class="post-meta">
-      <span class="post-time"> 2021-03-06 </span>
-      
-    </div>
-  </header>
-  
-  <div class="post-content">
-    <div class="post-summary">
-      假设发送方向接收方发送$M_1$,$M_
-    </div>
-    <div class="read-more">
-      <a href="/post/othercs/%E5%BF%AB%E9%87%8D%E4%BC%A0%E4%B8%8E%E5%BF%AB%E6%81%A2%E5%A4%8D/" class="read-more-link">Read more...</a>
-    </div>
-  </div>
-</article>
+          <article class="post">
+    
+    <header class="post-header">
+      <h1 class="post-title">每日睡眠時間記錄</h1>
 
-    <article class="post">
-  <header class="post-header">
-    <h1 class="post-title"><a class="post-link" href="/post/toss/latex%E4%B8%AD%E5%A6%82%E4%BD%95%E5%86%99%E5%A4%A7%E7%9F%A9%E9%98%B5/">LaTex大矩阵的写法</a></h1>
-    <div class="post-meta">
-      <span class="post-time"> 2020-11-15 </span>
-      
-    </div>
-  </header>
-  
-  <div class="post-content">
-    <div class="post-summary">
-      解决方案 矩阵如果太大会引发错误,这是因为
-    </div>
-    <div class="read-more">
-      <a href="/post/toss/latex%E4%B8%AD%E5%A6%82%E4%BD%95%E5%86%99%E5%A4%A7%E7%9F%A9%E9%98%B5/" class="read-more-link">Read more...</a>
-    </div>
-  </div>
-</article>
+      <div class="post-meta">
+        <span class="post-time"> 2023-01-24 </span>
+        
+        
+      </div>
+    </header>
 
-    <article class="post">
-  <header class="post-header">
-    <h1 class="post-title"><a class="post-link" href="/post/linux/kubuntu-%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98%E4%B8%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88/">KUbuntu 常见问题与解决方案</a></h1>
-    <div class="post-meta">
-      <span class="post-time"> 2020-11-02 </span>
-      
-    </div>
-  </header>
-  
-  <div class="post-content">
-    <div class="post-summary">
-      make fish the default shell 1 chsh -s `which fish` VPN cannot save password change the pattern into all users
-    </div>
-    <div class="read-more">
-      <a href="/post/linux/kubuntu-%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98%E4%B8%8E%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88/" class="read-more-link">Read more...</a>
-    </div>
+    <div class="post-toc" id="post-toc">
+  <h2 class="post-toc-title">Contents</h2>
+  <div class="post-toc-content always-active">
+    <nav id="TableOfContents"></nav>
   </div>
-</article>
+</div>
+    <div class="post-content">
+      <p>最重要的是睡一覺</p>
+<p>每日睡前準時更新!!!</p>
+<table>
+<thead>
+<tr>
+<th>日期</th>
+<th>睡眠開始時間</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2022-01-24</td>
+<td>2022-01-25-00-15</td>
+</tr>
+</tbody>
+</table>
+    </div>
 
-    <article class="post">
-  <header class="post-header">
-    <h1 class="post-title"><a class="post-link" href="/post/linux/linux%E4%B8%8B%E5%A6%82%E4%BD%95%E7%A6%81%E7%94%A8caps-lock/">Linux下如何禁用Caps Lock</a></h1>
-    <div class="post-meta">
-      <span class="post-time"> 2020-10-31 </span>
-      
-    </div>
-  </header>
+    <div class="post-copyright">
+  <p class="copyright-item">
+    <span class="item-title">Author</span>
+    <span class="item-content">rwwg</span>
+  </p>
+  <p class="copyright-item">
+    <span class="item-title">LastMod</span>
+    <span class="item-content">
+        2023-01-24
+        
+    </span>
+  </p>
   
-  <div class="post-content">
-    <div class="post-summary">
-      在命令行输入 1 setxkbmap -option caps:none
-    </div>
-    <div class="read-more">
-      <a href="/post/linux/linux%E4%B8%8B%E5%A6%82%E4%BD%95%E7%A6%81%E7%94%A8caps-lock/" class="read-more-link">Read more...</a>
-    </div>
-  </div>
-</article>
-
-    <article class="post">
-  <header class="post-header">
-    <h1 class="post-title"><a class="post-link" href="/post/toss/vscode%E7%9A%84latex%E6%8F%92%E4%BB%B6%E9%85%8D%E7%BD%AE/">VSCode的Latex插件配置</a></h1>
-    <div class="post-meta">
-      <span class="post-time"> 2020-10-01 </span>
-      
-    </div>
-  </header>
-  
-  <div class="post-content">
-    <div class="post-summary">
-      根据你的操作系统,安装texlive 1 sudo
-    </div>
-    <div class="read-more">
-      <a href="/post/toss/vscode%E7%9A%84latex%E6%8F%92%E4%BB%B6%E9%85%8D%E7%BD%AE/" class="read-more-link">Read more...</a>
-    </div>
-  </div>
-</article>
-
-    </section>
-  
-  <nav class="pagination">
-    <a class="prev" href="/page/18/">
-        <i class="iconfont icon-left"></i>
-        <span class="prev-text">Prev</span>
-      </a>
-    <a class="next" href="/page/20/">
-        <span class="next-text">Next</span>
-        <i class="iconfont icon-right"></i>
-      </a>
-  </nav>
+  <p class="copyright-item">
+    <span class="item-title">License</span>
+    <span class="item-content"><a rel="license noopener" href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank">CC BY-NC-ND 4.0</a></span>
+  </p>
+</div>
+<footer class="post-footer">
+      <div class="post-tags">
+          <a href="/tags/simplified-chinese/">Simplified Chinese</a>
+          <a href="/tags/sleep/">sleep</a>
+          </div>
+      <nav class="post-nav">
+        
+        <a class="next" href="/post/othercs/cas%E9%87%8D%E8%AF%95%E4%B8%BA%E5%95%A5%E4%B8%8D%E7%94%A8%E7%AD%89%E5%BE%85%E9%9A%8F%E6%9C%BA%E6%97%B6%E9%97%B4/">
+            <span class="next-text nav-default">CAS重试为啥不用等待随机时间?</span>
+            <span class="next-text nav-mobile">Next</span>
+            <i class="iconfont icon-right"></i>
+          </a>
+      </nav>
+    </footer>
+  </article>
         </div>
         
+
+  
+
+  
 
       </div>
     </main>
